<resources>
    <string name="app_name">산타의 리스트</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Common-->
    <string name="phone_number">전화번호</string>
    <string name="email">이메일</string>
    <string name="present_date">선물해 줄 날짜</string>
    <string name="present_history_mine">내가 친구에게 받은 선물</string>
    <string name="present_history_yours">내가 친구에게 준 선물</string>
    <string name="wish_list">친구의 위시리스트</string>
    <string name="tab_item_1">연락처</string>
    <string name="tab_item_2">내정보</string>

    <string name="please_check_image">프로필 이미지를 확인해주세요.</string>
    <string name="please_check_name">이름을 확인해 주세요.</string>
    <string name="please_check_phone_number">전화번호를 확인해 주세요.</string>
    <string name="please_check_email">이메일을 확인해 주세요.</string>
    <string name="please_check_date">날짜를 선택해 주세요.</string>

    <!--Menu Items-->
    <string name="menu_item_list">리스트뷰로 보기</string>
    <string name="menu_item_grid">그리드뷰로 보기</string>
    <string name="menu_item_1">전화번호</string>
    <string name="menu_item_2">전화번호</string>

    <!--Contact List Fragment-->
    <string name="is_star">즐겨찾기 한 친구</string>
    <string name="menu_filtering_list">내 친구 목록</string>
    <string name="menu_filtering_category">전체보기 </string>

    <string-array name="catetory_array">
        <item>전체보기</item>
        <item>선물 해줄 사람</item>
        <item>선물 해준 사람</item>
        <item>가족</item>
        <item>친구</item>
        <item>회사</item>
        <item>학교</item>
    </string-array>


    <!--Contact Detail Fragment-->

    <string name="alert_on"><u>알림ON</u></string>
    <string name="alert_off"><u>알림OFF</u></string>
    <string name="complete">완료</string>
    <string name="move">설정하러 가기</string>
    <string name="delete">삭제</string>
    <string name="cancel">취소</string>
    <string name="alarm_title">알림 설정</string>
    <string name="alarm_quest">언제 알려드릴까요?</string>
    <string name="alarm_ask_delete">알림을 삭제하시겠습니까?</string>
    <string name="alarm_ask_permission">알림권한 설정이 필요합니다.</string>
    <string name="alarm_need_permission">알림을 원하시면 설정에서 알림 권한을 \n허용해주시기 바랍니다.</string>
    <string name="alarm_selected">&#160;알림이 설정되었습니다.</string>
    <string name="alarm_second_5">5초 뒤</string>
    <string name="alarm_day_before">하루 전</string>
    <string name="alarm_today">당일</string>

    <string name="gift">선물하러 가기</string>
    <string name="gift_shop">어디에서 선물을 고를까요?</string>
    <string name="gift_shop_kakao">카카오톡\n선물하기</string>
    <string name="gift_shop_coupang">쿠팡\n선물하기</string>

    <string name="btn_message">문자 보내기</string>
    <string name="btn_call">전화 하기</string>
    <string name="christmas_eve">&#160;&#160;산타로서 선물할 때가 됐어요!&#160;&#160;</string>
    <string name="christmas">소중한 사람에게 마음을 전하러 가볼까요?</string>

    <!--Group Category Dialog-->
    <string name="group_title">그룹 선택</string>
    <string name="group_none">해당없음</string>
    <string name="group_family">가족</string>
    <string name="group_work">직장</string>
    <string name="group_friend">친구</string>
    <string name="group_school">학교</string>


    <!--Add Contact Dialog-->
    <string name="dialog_image">dialog image</string>
    <string name="dialog_name">이름</string>
    <string name="dialog_tel">전화번호</string>
    <string name="dialog_email">이메일</string>
    <string name="dialog_group_category">그룹 선택</string>
    <string name="dialog_cancle">취소</string>
    <string name="dialog_ok">확인</string>
    <string name="dialog_gift_date">선물 해줄 날짜</string>
    <string name="mypage_profile_image_desc">mypage_profile_image</string>

    <!--My Page Fragment-->
    <string name="btn_random_message">아무에게나 문자 보내기</string>
    <string name="btn_random_call">아무에게나 전화 하기</string>

    <!--My Page Dialog Fragment-->
    <string name="mypage_present_date">나에게 선물해 줄 날짜</string>
    <string name="mypage_dialog_gift_date">나에게 선물 해줄 날짜</string>

</resources>